Make sure divs dont overflow to the right

--- a/content/assets/stylesheets/site.css
+++ b/content/assets/stylesheets/site.css
@@ -1,4 +1,4 @@
-  @charset "utf-8";
+@charset "utf-8";
 @import "normalize";
 @font-face {
   font-family: 'LeagueGothic-Regular';
@@ -8,6 +8,11 @@
 @font-face {
   font-family: 'Univers';
   src: url('/assets/fonts/UNIVERSL_5.TTF') format('truetype');
+}
+
+/* Make sure divs dont overflow to the right */
+html {
+  overflow-x: hidden;
 }
 
 @media only screen and (min-width: 768px) {
